# eff-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  test.yml
docs/: todo.md
eff/: __init__.py  providers.py  retrieval.py  rewriter.py  scorer.py  server.py
eff/resources/: SKILL.md  __init__.py  dimensions.json  examples.md
eff_mcp/: __init__.py  scorer.py  server.py
resources/: SKILL.md  dimensions.json  examples.md
scripts/: index_papers.py
tests/: conftest.py  test_providers.py  test_retrieval.py  test_scorer.py
tests/integration/: test_openai_e2e.py  test_supabase_e2e.py
